Add template nodes

--- a/environment.conf
+++ b/environment.conf
@@ -1,2 +1,3 @@
 modulepath          = modules:site:$basemodulepath
+data_provider = hiera
 config_version      = 'scripts/config_version.sh $environmentpath $environment'
