--- a/environment.conf
+++ b/environment.conf
@@ -1,3 +1,3 @@
 modulepath          = modules:site:$basemodulepath
-data_provider = hiera
+environment_data_provider = hiera
 config_version      = 'scripts/config_version.sh $environmentpath $environment'
