--- a/data/simp_classes.yaml
+++ b/data/simp_classes.yaml
@@ -22,27 +22,27 @@ classes:
   # Virus scanning.
   - 'clamav'
   # Ensuring reasonably sane defaults for both at and common.
-  - 'simplib::at'
-  - 'simplib::cron'
-  - 'simplib::chkrootkit'
-  - 'simplib::etc_default::nss'
-  - 'simplib::etc_default::useradd'
-  - 'simplib::host_conf'
-  - 'simplib::incron'
-  - 'simplib::issue'
-  - 'simplib::libuser_conf'
-  - 'simplib::login_defs'
-  - 'simplib::localusers'
-  - 'simplib::modprobe_blacklist'
-  - 'simplib::nsswitch'
-  - 'simplib::prelink'
-  - 'simplib::profile_settings'
-  - 'simplib::resolv'
-  - 'simplib::secure_mountpoints'
-  - 'simplib::sysconfig::init'
-  - 'simplib::sysctl'
-  - 'simplib::timezone'
-  - 'ntpd'
+  # - 'simplib::at'
+  # - 'simplib::cron'
+  # - 'simplib::chkrootkit'
+  # - 'simplib::etc_default::nss'
+  # - 'simplib::etc_default::useradd'
+  # - 'simplib::host_conf'
+  # - 'simplib::incron'
+  # - 'simplib::issue'
+  # - 'simplib::libuser_conf'
+  # - 'simplib::login_defs'
+  # - 'simplib::localusers'
+  # - 'simplib::modprobe_blacklist'
+  # - 'simplib::nsswitch'
+  # - 'simplib::prelink'
+  # - 'simplib::profile_settings'
+  # - 'simplib::resolv'
+  # - 'simplib::secure_mountpoints'
+  # - 'simplib::sysconfig::init'
+  # - 'simplib::sysctl'
+  # - 'simplib::timezone'
+  # - 'ntpd'
   # Set up the access.conf basics, allow root locally and deny
   # everyone else from everywhere by default.
   - 'pam::access'
