--- a/data/simp_classes.yaml
+++ b/data/simp_classes.yaml
@@ -42,7 +42,7 @@ classes:
   # - 'simplib::sysconfig::init'
   # - 'simplib::sysctl'
   # - 'simplib::timezone'
-  # - 'ntpd'
+  - 'ntpd'
   # Set up the access.conf basics, allow root locally and deny
   # everyone else from everywhere by default.
   - 'pam::access'
