--- a/data/default.yaml
+++ b/data/default.yaml
@@ -1,3 +1,4 @@
+# vim: set expandtab ts=2 sw=2:
 ---
 # SIMP Global Catalysts
 use_iptables : false
@@ -9,8 +10,8 @@ use_ldap     : false
 classes:
   - 'site::vagrant_user'
   - 'epel'
-
-# Everything else
+class_exclusions:
+  - "pupmod"
 
 clamav::enable_freshclam: true
 
