--- a/data/default.yaml
+++ b/data/default.yaml
@@ -42,7 +42,7 @@ simplib::sudoers::default_entry:
     PS1 PS2 QTDIR USERNAME LANG LC_ADDRESS LC_CTYPE LC_COLLATE LC_IDENTIFICATION
     LC_MEASUREMENT LC_MESSAGES LC_MONETARY LC_NAME LC_NUMERIC LC_PAPER
     LC_TELEPHONE LC_TIME LC_ALL LANGUAGE LINGUAS _XKB_CHARSET XAUTHORITY"
-
+ssh::server::conf::permitrootlogin: true
 svckill::ignore:
   - 'vboxadd'
   - 'vboxadd-service'
