--- a/hiera.yaml
+++ b/hiera.yaml
@@ -9,6 +9,7 @@ hierarchy:
         - name: "Compat path"
           backend: yaml
           paths:
+                  - 'distribution/%{simp_options_server_distribution}'
                   - 'hosts/%{trusted.certname}'
                   - 'hosts/%{::fqdn}'
                   - 'hosts/%{::hostname}'
