Update hiera config to 6.0.0-Beta

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -10,16 +10,15 @@ hierarchy:
           backend: yaml
           paths:
                   - 'hosts/%{trusted.certname}'
-                  - 'hosts/%{::fqdn}'
-                  - 'hosts/%{::hostname}'
-                  - 'domains/%{::domain}'
-                  - '%{::osfamily}'
-                  - '%{::operatingsystem}/%{::operatingsystemrelease}'
-                  - '%{::operatingsystem}/%{::operatingsystemmajrelease}'
-                  - '%{::operatingsystem}'
+                  - 'hosts/%{facts.fqdn}'
+                  - 'hosts/%{facts.hostname}'
+                  - 'domains/%{facts.domain}'
+                  - '%{facts.os.family}'
+                  - '%{facts.os.name}/%{facts.os.release.full}'
+                  - '%{facts.os.name}/%{facts.os.release.major}'
+                  - '%{facts.os.name}'
                   - 'hostgroups/%{::hostgroup}'
                   - 'default'
                   - 'compliance_profiles/%{compliance_profile}'
-                  - 'simp_classes'
-                  - 'simp_def'
-                  - 'simp/%{module_name}/default'
+                  - 'simp_config_settings'
+                  - 'scenarios/%{::simp_scenario}'
