--- a/data/scenarios/simp.yaml
+++ b/data/scenarios/simp.yaml
@@ -6,52 +6,65 @@
 #                                                                    #
 # Feel free to trim these down, or add to them as necessary.         #
 #                                                                    #
-# However, if you remove classes you should add them to downstream   #
-# files if possible so that the settings are applied as uniformly as #
-# possible.                                                          #
-#                                                                    #
 # For more information on how to use Hiera, see:                     #
-#   * http://docs.puppetlabs.com/hiera/1/puppet.html                 #
-#   * http://docs.puppetlabs.com/hiera/1/complete_example.html       #
+#   * http://docs.puppetlabs.com/hiera/latest/puppet.html            #
+#   * http://docs.puppetlabs.com/hiera/latest/complete_example.html  #
 #                                                                    #
 ######################################################################
+
+### SIMP Options ###
+# The following settings in the simp_options namespace reference site or environment
+# settings essential to SIMP's functionality. This list is not comprehensive.
+#
+# Please see the simp_options module for documentation.
+# http://www.puppetmodule.info/github/simp/pupmod-simp-simp_options/master/
+
+# SIMP scenario defaults
+simp_options::auditd: true
+simp_options::clamav: true
+simp_options::firewall: true
+simp_options::haveged: true
+simp_options::ldap: true
+simp_options::logrotate: true
+simp_options::pam: true
+simp_options::pki: simp
+simp_options::selinux: true
+simp_options::sssd: true
+simp_options::stunnel: true
+simp_options::syslog: true
+simp_options::tcpwrappers: true
+
+# Options that are not suggested to be turned on by default:
+simp_options::ipsec: false
+simp_options::kerberos: false
 
 classes:
   - 'aide'
   - 'auditd'
   # Virus scanning.
   - 'clamav'
-  # Ensuring reasonably sane defaults for both at and common.
-  # - 'simplib::at'
-  # - 'simplib::cron'
-  # - 'simplib::chkrootkit'
-  # - 'simplib::etc_default::nss'
-  # - 'simplib::etc_default::useradd'
-  # - 'simplib::host_conf'
-  # - 'simplib::incron'
-  # - 'simplib::issue'
-  # - 'simplib::libuser_conf'
-  # - 'simplib::login_defs'
-  # - 'simplib::localusers'
-  # - 'simplib::modprobe_blacklist'
-  # - 'simplib::nsswitch'
-  # - 'simplib::prelink'
-  # - 'simplib::profile_settings'
-  # - 'simplib::resolv'
-  # - 'simplib::secure_mountpoints'
-  # - 'simplib::sysconfig::init'
-  # - 'simplib::sysctl'
-  # - 'simplib::timezone'
+  - 'chkrootkit'
+  # Ensuring reasonably sane defaults.
+  - 'at'
+  - 'cron'
+  - 'incron'
+  - 'useradd'
+  - 'resolv'
+  - 'nsswitch'
+  - 'issue'
+  - 'tuned'
+  - 'swap'
+  - 'timezone'
   - 'ntpd'
   # Set up the access.conf basics, allow root locally and deny
   # everyone else from everywhere by default.
   - 'pam::access'
   # Enable 'wheel' access controls.
   - 'pam::wheel'
-  # Set up the puppet server or client as appropriate for your system.
+  # Set up the Puppet agent as appropriate for your system.
   - 'pupmod'
   # We certainly want logging
-  - 'simp::rsyslog::stock'
+  - 'simp_rsyslog'
   - 'selinux'
   # Simp base class
   - 'simp'
@@ -63,16 +76,20 @@ classes:
   # A group of services that you probably want running but are
   # technically optional.
   - 'simp::base_services'
-  # This sets up an update schedule.
-  # You should set variables under the simplib::yum_schedule namespace to
+  # simp::yum sets up an update schedule.
+  # You should set variables under the simp::yum::schedule namespace to
   # disable updates from specific repositories.
   - 'simp::yum'
+  # Blacklists several kernel modules, per compliance guidelines.
+  - 'simp::kmod_blacklist'
+  # Manage mountpoints, including all tmp dirs on the system
+  - 'simp::mountpoints'
+  # Set common and recommended sysctl settings
+  - 'simp::sysctl'
   # Set up the SSH server and client.
   - 'ssh'
   - 'sudosh'
   # We want to ensure that only the services we define in Puppet are
   # goig to be enabled and run.
   - 'svckill'
-  # Add TPM support by default. This will grow over time but, if you have a
-  # TPM, you most likely want to use it!
-  - 'tpm'
+
