--- a/environment.conf
+++ b/environment.conf
@@ -1,3 +1,3 @@
-modulepath          = site:modules:$basemodulepath
+modulepath          = site:modules:$basemodulepath:/data/$environment/modules
 environment_data_provider = hiera
 config_version      = 'scripts/config_version.sh $environmentpath $environment'
